syntax = 'proto3';

option java_package = 'com.arealvision.grpcdemo.proto';

service user{
    rpc login(LoginRequest) returns (LoginResponds);
    rpc logout(Empty) returns (LogoutResponds);
}

message LoginRequest{
    string username = 1;
    string password = 2;
}

message LoginResponds{
    string message = 1;
    int32 code = 2;
}

message LogoutResponds{
    string message = 1;
    int32 code = 2;
}

message Empty{
    string message = 1;
    int32 code = 2;
}